# comsol-agent

./: .claw-workflows.json  .env.ts.json  .gitignore  .gitignore.workspace  AGENT.md  CONFIG.md  CONTEXT.md  EXAMPLE.md  INSTALL.md  LICENSE  README.md  bridge_entry.py  cli.py  env.example  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  restart-dev.ps1  setup.py  tsconfig.base.json
agent/: ARCHITECTURE_PSEUDOCODE.md  README.md  __init__.py  actions.py  case_library.py  celery_app.py  dependencies.py  doc_knowledge.py  events.py  memory_agent.py  memory_tasks.py  qa_agent.py  router.py  session.py  summary_agent.py  tools.py  tui.py  tui_bridge.py
desktop/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
docs/: BRIDGE-WORKING-SNAPSHOT-f183ac2.md  CONFIG.md  CONTRIBUTING.md  INSTALL.md  README.md  architecture.md  comsol-api-notes.md  comsol-modules-and-context.md  llm-backends.md  ollama-setup.md  rewrite-ts-release-checklist.md  thesis-outline.md
examples/: basic_usage.py
java/: README.md  compile.sh  run.sh
schemas/: __init__.py  geometry.py  material.py  physics.py  study.py  task.py
scripts/: agent_build_loop.py  build.bat  build.py  build.sh  bundle-desktop.bat  bundle-desktop.ps1  dev_test.py  import_comsol_docs.py  py_to_mph_minimal.py  run_agent.py  run_heat_test.py  setup.py  sync_comsol_case_library.py
src/: README.md  __init__.py  main.py
tests/: README.md  test_api_capability_builder.py  test_case_library.py  test_case_library_sync.py  test_clawcode_dispatcher.py  test_comsol_ops_cli.py  test_context_memory.py  test_dialog_logging.py  test_doc_kb_actions.py  test_doc_knowledge.py  test_executor.py  test_integration.py  test_java_controller_extensions.py  test_planner.py  test_react.py  (+4 more)
(+306 files in other folders)
